[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 130.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="CountDownTimer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
margin_left = 812.0
margin_top = 7.0
margin_right = 947.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Time:"

[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
